--- a/src/media.css
+++ b/src/media.css
@@ -107,7 +107,22 @@
       position: absolute;
       opacity: 0;
     }
-    
+    .div-home {
+     
+      background-image: url(./img/background-mobile.jpg);
+      background-position: 0 50%;
+      background-size: 100%;
+      color: white;
+    }
+    .navigation-li {
+      color: white;
+      padding: 3px 3px 3px;
+    }
+    .header__title{
+      font-size: .8em;
+      padding: 0;
+      margin: 3px;
+    }
   
   }
 
