--- a/src/App.css
+++ b/src/App.css
@@ -588,7 +588,111 @@ a {
   background-color: rgba(255, 255, 255, 0.5);
   color: rgba(0, 0, 0, .5);
 }
-select{
-  direction: rtl;
 
+
+.select-css {
+  display: block;
+  font-size: .9em;
+  font-family: sans-serif;
+  font-family: 'Formula1 Display Regular';
+  font-weight: bolder;
+  color: #444;
+  line-height: 1.3;
+  padding: .6em 1.4em .5em .8em;
+  width: 100%;
+  max-width: 100%; 
+  box-sizing: border-box;
+  margin: 0;
+  border: 1px solid #aaa;
+  box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+  border-radius: .5em;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  background-image: url('https://image.flaticon.com/icons/svg/748/748063.svg'),
+    linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
+  background-repeat: no-repeat, repeat;
+  background-position: right .7em top 50%, 0 0;
+  background-size: .65em auto, 100%;
+}
+.select-css::-ms-expand {
+  display: none;
+}
+.select-css:hover {
+  border-color: rgba(252, 59, 85, 0.7);
+}
+.select-css:focus {
+  border-color: #aaa;
+  box-shadow: 0 0 1px 3px rgba(252, 59, 85, 0.7);
+  box-shadow: 0 0 0 3px -moz-mac-focusring;
+  color: #222; 
+  outline: none;
+}
+.select-css option {
+  font-family: 'Formula1 Display Regular';
+  font-size: .8em;
+  font-weight: lighter;
+}
+.select-css option:hover {
+  box-shadow: 0 0 10px 100px rgb(168, 24, 48) inset;
+}
+
+
+.legacy__ul {
+  width: 90%;
+}
+.legacy__li {
+  margin: 0 0 3px;
+  padding: 0;
+  width: 100%;
+}
+
+.legacy__div--listItem {
+  /*display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+  padding: 0 5% 0;*/
+
+  width: 100%;
+
+  display: grid;
+  justify-items: left;
+  align-items: center;
+  grid-template-columns: 8% 42% 30% 20%;
+}
+
+.legacy__img--flag {
+  margin: auto;
+  height: 1.7em;
+}
+
+.legacy__p {
+  margin: 0;
+  padding: 0;
+  font-family: 'Formula1 Display Regular';
+  font-size: .9em;
+  letter-spacing: .6px;
+  font-family: 'Formula1 Display Regular';
+}
+
+.legacy__h4 {
+  margin: .1em 0 1em;
+}
+
+.legacy__div--number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  width: 3.416vmin; /*32px*/
+  height: 3.416vmin; /*32px*/
+  border-radius: 1px;
+  border-bottom-right-radius: .33em;
+  background-color: rgba(250, 250, 248, .9);
+  color: black;
+  font-family: 'Formula1 Display Regular';
+  font-size: .9em;/*16px*/
+  font-weight: bold;
 }
