--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,28 @@
+body{
+  height: 100vh;
+}
+#root {
+  height: 100%;
+}
 .App {
   text-align: center;
   font-size: 2vmin; /*18px;*/
-  min-height: 100vh;
+  height: 100%;
   position: relative;
+  display: flex;
+  flex-direction: column;
+}
+.header {
+  height: 7.65vmin;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  background-color: white;
+  color: white;
+  text-align: center;
+  font-size: 2vmin; /*18px;*/
 }
 .header__logo {
   height: 23.38px;
@@ -10,27 +30,15 @@
   padding: 5px;
   pointer-events: none;
 }
-.header {
-  background-color: white;
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  text-align: center;
-  font-size: 2vmin; /*18px;*/
-}
 .header__div {
   position: relative;
   width: 100%;
-  height: 71px; /*7vmin;*/
-  height: 7.65vmin; 
-  background-color: #E10600;
-  color: white;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #E10600;
+  color: white;
   font-size: 1.2em; /*1.5vmin;*/
   font-family: 'Formula1 Display Regular';
   
@@ -549,16 +557,18 @@ h2 {
   content: 'NOV';
 }
 
-.div-home {
+.home__div {
   margin: 5px 0 5px;
   position: relative;
-  height: calc(100vh - 68px);
+  height: 100%;
+  width: 100%;
+  
   display: flex;
   justify-content: center;
   align-items: center;
   background-image: url(./img/background.jpg);
   background-position: 0 50%;
-  background-size: 100%;
+  background-size: 150%;
   color: white;
   filter: saturate(50%);
 }
@@ -695,4 +705,12 @@ a {
   font-family: 'Formula1 Display Regular';
   font-size: .9em;/*16px*/
   font-weight: bold;
+}
+
+.spinner {
+  padding: 100px;
+}
+
+.home__title {
+  font-size: 2em;
 }
