--- a/src/media.css
+++ b/src/media.css
@@ -107,7 +107,7 @@
       position: absolute;
       opacity: 0;
     }
-    .div-home {
+    .home__div {
      
       background-image: url(./img/background-mobile.jpg);
       background-position: 0 50%;
